# SonarPublish

./: README.md  Tasks this semester - note.docx
11.10/: .gitignore  AUTHORS.txt
11.10/src/: CMakeLists.txt  plugin.c
Data/Eelume_WBMS_Georef_config/: wbms_georef_eelume.conf
Nytest/: CMakeLists.txt  sonarData.proto  test.c  test.h
Sonarpublish/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  Tel_data_before_serialization.json  data_EelumeTest.csv  linux-run-clang-format.sh
Sonarpublish/samples/: 2022-11-22_09-41-38_eelume_ntnu_Nyhavna.SBD  2023-01-13_11-56-48_eelume_Airplane.SBD  in.sbd
Sonarpublish/samples/12.01.23_PedroUnderwaterTest/: 2023-12-01_12-23-28_eelume_ntnu.SBD  2023-12-01_12-38-24_eelume_ntnu.SBD  2023-12-01_12-53-24_eelume_ntnu.SBD  2023-12-01_13-08-24_eelume_ntnu.SBD  2023-12-01_13-23-24_eelume_ntnu.SBD
Sonarpublish/samples/27.02.2024/: 2024-02-27_09-21-16_eelume_ntnu.SBD  2024-02-27_09-36-16_eelume_ntnu.SBD  2024-02-27_10-06-16_eelume_ntnu.SBD  2024-02-27_11-06-16_eelume_ntnu.SBD  2024-02-27_11-21-16_eelume_ntnu.SBD  2024-02-27_11-23-21_eelume_ntnu.SBD
Sonarpublish/src/: CMakeLists.txt  plugin.c
Sonarpublish/src/common/: linalg.cpp  linalg.h  sonarmeta.c  sonarmeta.h  sonarshared.c
Sonarpublish/src/eelnmeadec/: eelnmeadec.c
Sonarpublish/src/nmeaparse/: CMakeLists.txt  nmeaparse.c
Sonarpublish/src/sonarmux/: sonarmux.c  sonarmux.h
Sonarpublish/src/sonarparse/: CMakeLists.txt  norbit_wbms.c  norbit_wbms.h  sbd.c  sbd.h  sonarparse.c  sonarparse.h
Sonarpublish/src/sonarpublish/: CMakeLists.txt  f.c  georeferencing.c  georeferencing.h  sonarData.pb-c.c  sonarData.pb-c.h  sonarData.proto  sonarpublish.c  sonarpublish.h
Sonarpublish/src/sonarsink/: sonarsink.c  sonarsink.h
Subscriber/: Math.py  ScreenCamera_2024-04-15-15-30-25.json  Subscriber.py  SubscriberWithVisualization.py  SubscriberWithVisualization_and_Georeferencing_notWorking.py  SubscriberWithVisualization_pointCloud_and_Orientation.py  Subscriber_ECEF_VisualizingGeorefData.py  Subscriber_NED_VisualizingGeorefData_FakingTheShift.py  Subscriber_VisualizingGeorefData.py  Subscriber_VisualizingGeorefData_FakingTheShift.py  Subscriber_VisualizingGeorefData_RotationMatrix.py  Subscriber_VisualizingGeorefData_RotationMatrix_NED.py  Subscriber_VisualizingOrientation.py  sonarData.proto  sonarData_pb2.py
Subscriber/DataQualityTest/: Tel_data_before_serialization_Nyhavna20sek.json  Tel_data_before_serialization_Nyhavna25sek_WithCubicSplineInterpolation.json  Tel_data_before_serialization_test_10sekithink_WithCorrectedTimeForAltitudeAndDepth.json  VisualizeTelDataFromBroadcaster.py
Subscriber/FixingPoseProblem/: SubSavingPoseAndRawPoseData.py  SubSavingPoseData.py  plotPose_and_rawPose.py  plotPose_and_rawPose_and_poseWith180Shift.py  plotPose_and_rawPose_edited.py  pose_and_rawPose_data.json  pose_and_rawPose_data_Nyhavna10sek.json  (+5 more)
Visualization Test/: VisPy_test.py
Visualization test/: Scatter_new.c  scatter.c  scatter_new
gstsonar-main_new_04.10_TRIED FIXING IT/src/: CMakeLists.txt  plugin.c
gstsonar-main_new_04.10_TRIED FIXING IT/src/common/: CMakeLists.txt  sonarshared.h
gstsonar-main_new_04.10_TRIED FIXING IT/src/eelnmeadec/: eelnmeadec.c  eelnmeadec.h
gstsonar-main_new_04.10_TRIED FIXING IT/src/nmeaparse/: nmeaparse.h
gstsonar-main_new_04.10_TRIED FIXING IT/src/sonarmux/: sonarmux.h
gstsonar-main_new_04.10_TRIED FIXING IT/src/sonarparse/: sonarparse.c  sonarparse.h
gstsonar-main_new_04.10_TRIED FIXING IT/src/sonarpublish/: CMakeLists.txt  sonarData.pb-c.c  sonarData.pb-c.h  sonarData.proto  sonarpublish.c  sonarpublish.h
gstsonar-main_new_04.10_TRIED FIXING IT/src/sonarsink/: CMakeLists.txt  openglWp.h
pythonScript_subscriber/: plotting_and_subscribing_for_windows.py  sonarData.proto  sonarData_pb2.py  subscribing.py  subscribing_and_plotting.py  test.py
pythonServer/: Server.py  Subscriber.py  SubscriberWithVisualization.py  Two_SubscriberWithVis.py  sonarData.proto
sonarparse/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
(+63 files in other folders)
